fix z-index positions of Character, goMenu function added in Character

--- a/src/scss/character/index.scss
+++ b/src/scss/character/index.scss
@@ -92,6 +92,12 @@
       }
 }
 .character-content{
+    position: absolute;
+    left: 0;
+    top: -0;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
     opacity: 0;
     visibility: hidden;
     &.visible{
@@ -176,6 +182,7 @@
         width: 170%;
         height: 170%;
         opacity: 0;
+        z-index: 1;
         transform: scale(1.5);
         transform-origin: 50% 50%;
         animation: character-logo-in 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s forwards;
@@ -284,7 +291,7 @@
 }
 .character-btn-back{
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     bottom: 39px;
     width: 100%;
     text-align: center;
